--- a/index.html
+++ b/index.html
@@ -576,16 +576,13 @@
         </div>
     </div>
 </section>
-<section class="container mt-5" id="our-team" style="text-align: left;">
+<section class="container mt-5" id="our-team">
     <h1 class="title" style="color: darkred;">Our Team</h1>
-    <div class="row mt-4">
-        <div class="col-md-6">
-            <p class="text-paragraph" style="text-justify: left;">
-                Our team is composed of dedicated professionals with diverse expertise in software development, quality assurance, and customer support. We are committed to delivering innovative solutions and exceptional service to meet your needs. Each member brings unique skills and experiences, working collaboratively to achieve excellence and drive success in our projects.
-            </p>
-        </div>
-    </div>
+    <p class="text-paragraph mt-4" style="text-align: justify;">
+        Our team is composed of dedicated professionals with diverse expertise in software development, quality assurance, and customer support. We are committed to delivering innovative solutions and exceptional service to meet your needs. Each member brings unique skills and experiences, working collaboratively to achieve excellence and drive success in our projects.
+    </p>
 </section>
+
 
 <section class="container mt-5" id="ceo-letter">
     <h2 class="title" style="color: darkred;">A Message from Our CEO</h2>
