--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 .background-container {
     position: relative;
     width: 100%;
-    height: auto; /* Adjust height automatically based on content */
+    height: auto;
     min-height: 100vh; /* Minimum height of full viewport */
     overflow: hidden;
 }
@@ -152,15 +152,15 @@
     }
 }
 </style>
-</style>
+
 
 </head>
 <body>
 
 <div class="background-container">
-    <video autoplay muted loop playsinline class="background-video">
-        <source src="./videos/PHARPRO.mp4" type="video/mp4">
-     </video>
+    <video class="background-video" autoplay muted loop playsinline>
+        <source src="https://github.com/Mohammadhawawdeh/PHARPRO/raw/main/Videos/PHARPRO.mp4" type="video/mp4">
+             </video>
     <div class="content">
         <h1>PHARPRO Consultation Services</h1>
         <h2>Your Partner in Pharmaceutical Excellence</h2>
