--- a/index.html
+++ b/index.html
@@ -50,15 +50,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHARPRO Consultation Services</title>
- <style>
-/* Background Container */
-.background-container {
-    position: relative;
-    width: 100%;
-    height: 100vh; /* Full viewport height */
-    overflow: hidden;
-}
-
 <style>
 /* Background Container */
 .background-container {
@@ -74,8 +65,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: auto;
-    height: 100%;
+    width: 100%; /* Fit the video to the width of the container */
+    height: auto; /* Adjust height automatically */
     transform: translate(-50%, -50%);
     object-fit: cover; /* Ensures the video covers the entire container without stretching */
     z-index: 0;
@@ -126,9 +117,9 @@
 /* Responsive Design Adjustments */
 @media (max-width: 768px) {
     .background-video {
-        object-fit: contain; /* Ensure video doesn't overflow on smaller screens */
+        width: 100%; /* Ensure video fits the full width */
         height: auto; /* Adjust height automatically */
-        width: 100%; /* Fit video to screen width */
+        object-fit: cover; /* Ensure video covers the container without stretching */
         top: 0;
         left: 0;
         transform: none; /* Remove centering transform */
@@ -152,6 +143,7 @@
     }
 }
 </style>
+
 
 
 </head>
