--- a/index.html
+++ b/index.html
@@ -781,26 +781,14 @@
     <h2 class="title" style="color: darkred;">Contact Us:</h2>
     <div class="row mt-4">
         <div class="col-md-6">
-            <form action="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" method="post" target="_blank">
-                <!-- Replace "https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/formResponse" with the actual Google Forms link -->
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="entry.123456789" required>
-                </div>
-                <div class="mb-3">
-                    <label for="phone" class="form-label">Phone</label>
-                    <input type="tel" class="form-control" id="phone" name="entry.987654321" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="entry.555555555" required>
-                </div>
-                <div class="mb-3">
-                    <label for="inquiry" class="form-label">Inquiry</label>
-                    <textarea class="form-control" id="inquiry" name="entry.111111111" rows="4" required></textarea>
-                </div>
-                <input type="submit" class="btn btn-primary" value="Submit">
-            </form>
+            <!-- Embedded Google Form -->
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/viewform?embedded=true"
+                    width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0"
+                    sandbox="allow-forms allow-same-origin allow-scripts allow-popups">
+                Loading…
+            </iframe>
+            <!-- Fallback link -->
+            <p>If the form does not submit, please click <a href="https://docs.google.com/forms/d/e/1FAIpQLSeB5d7GUqViPShugRvqR3_py7-QocfE8E3qp8dSjGiR-jM1hw/viewform" target="_blank">here</a> to submit your details.</p>
         </div>
         <div class="col-md-6">
             <!-- Side image -->
@@ -808,6 +796,7 @@
         </div>
     </div>
 </section>
+
 
     <footer class="bg-dark text-white p-4">
     <div class="container">
