--- a/index.html
+++ b/index.html
@@ -608,10 +608,9 @@
     padding: 60px 0;
     background: url('./images/Gauge.gif') no-repeat center center; /* Add your image URL here */
     background-size: contain; /* Ensure the image fits within the section */
-    height: 45vh; /* Set a specific height for the section */
+    height: auto; /* Set height to auto for flexibility */
     text-align: center;
 }
-
 
 .icon-box {
     margin-bottom: 30px;
@@ -673,13 +672,29 @@
     }
 }
 
+/* Media Queries for Responsiveness */
+@media (max-width: 576px) {
+    .gauge {
+        width: 100px; /* Smaller gauge for mobile */
+        height: 100px; /* Smaller gauge for mobile */
+    }
+
+    .icon-box h3 {
+        font-size: 1.2em; /* Adjust heading size */
+    }
+
+    .icon-box p {
+        font-size: 1em; /* Adjust paragraph size */
+    }
+}
+
 </style>
 
 <section class="icon-section">
     <div class="container">
         <div class="row">
             <!-- Experience -->
-            <div class="col-md-4 icon-box">
+            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
                 <div class="gauge">
                     <div class="gauge-fill"></div>
                     <div class="gauge-cover"></div>
@@ -688,7 +703,7 @@
                 <p>Years of Experience</p>
             </div>
             <!-- Happy Clients -->
-            <div class="col-md-4 icon-box">
+            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
                 <div class="gauge">
                     <div class="gauge-fill"></div>
                     <div class="gauge-cover"></div>
@@ -697,17 +712,18 @@
                 <p>Happy Clients</p>
             </div>
             <!-- Projects -->
-            <div class="col-md-4 icon-box">
+            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
                 <div class="gauge">
                     <div class="gauge-fill"></div>
                     <div class="gauge-cover"></div>
                 </div>
-                <h3>16+</</h3>
+                <h3>16+</h3> <!-- Fixed closing tag here -->
                 <p>Projects Completed</p>
             </div>
         </div>
     </div>
 </section>
+
 <section class="container mt-5" id="our-team">
     <h1 class="title" style="color: darkred;">Our Team</h1>
     <p class="text-paragraph mt-4" style="text-align: justify;">
@@ -796,8 +812,6 @@
         </div>
     </div>
 </section>
-
-
     <footer class="bg-dark text-white p-4">
     <div class="container">
         <div class="row">
