--- a/index.html
+++ b/index.html
@@ -602,11 +602,6 @@
             <img src="./images/cogtive_logo.png" alt="COGTIVE">
             <p>COGTIVE</p>
         </div>
-        <!-- Partner 3: VIAN -->
-        <div class="partner-item text-center">
-        <img src="./images/VIAN.png" alt="VIAN Turnkey Projects">
-        <p>VIAN Turnkey Projects</p>
-        </div>
         <!-- Repeat partners to create continuous scrolling -->
         <div class="partner-item text-center">
             <img src="./images/arizona_logo.png" alt="Arizona">
@@ -615,10 +610,6 @@
         <div class="partner-item text-center">
             <img src="./images/cogtive_logo.png" alt="COGTIVE">
             <p>COGTIVE</p>
-        </div>
-        <div class="partner-item text-center">
-        <img src="./images/VIAN.png" alt="VIAN Turnkey Projects">
-        <p>VIAN Turnkey Projects</p>
         </div>
     </div>
 </div>
@@ -948,34 +939,36 @@
     <div class="container">
         <div class="row">
             <!-- Experience -->
-            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
+            <div class="col-12 col-md-4 icon-box">
                 <div class="gauge">
-                    <div class="gauge-fill"></div>
+                    <div class="gauge-fill" data-percentage="70"></div> <!-- Example percentage -->
                     <div class="gauge-cover"></div>
                 </div>
                 <h3>7+</h3>
                 <p>Years of Experience</p>
             </div>
             <!-- Happy Clients -->
-            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
+            <div class="col-12 col-md-4 icon-box">
                 <div class="gauge">
-                    <div class="gauge-fill"></div>
+                    <div class="gauge-fill" data-percentage="85"></div> <!-- Example percentage -->
                     <div class="gauge-cover"></div>
                 </div>
                 <h3>3+</h3>
                 <p>Happy Clients</p>
             </div>
             <!-- Projects -->
-            <div class="col-12 col-md-4 icon-box"> <!-- Changed to col-12 for mobile -->
+            <div class="col-12 col-md-4 icon-box">
                 <div class="gauge">
-                    <div class="gauge-fill"></div>
+                    <div class="gauge-fill" data-percentage="60"></div> <!-- Example percentage -->
                     <div class="gauge-cover"></div>
                 </div>
-                <h3>16+</h3> <!-- Fixed closing tag here -->
+                <h3>16+</h3>
                 <p>Projects Completed</p>
             </div>
         </div>
     </div>
+</section>
+
 </section>
 <!-- Call to Action -->
 <div class="row mt-5">
@@ -1057,12 +1050,16 @@ document.addEventListener('DOMContentLoaded', function () {
 
     gauges.forEach(gauge => {
         const percentage = gauge.getAttribute('data-percentage');
-        const degree = (percentage / 100) * 180; // Convert percentage to degrees (0-180)
+        const degree = (percentage / 100) * 360; // Convert percentage to degrees (0-360)
+
+        // Use `rotate` for full circle animation
         setTimeout(() => {
-            gauge.style.transform = `rotate(${degree}deg)`;
-        }, 100); // Small delay to allow for the transition to be visible
+            gauge.style.transform = `rotate(${degree}deg)`; // Rotate based on the percentage
+        }, 100);
     });
 });
+
+
 </script>
 <script type="text/javascript">
   (function(d, t) {
